package memory;

import javafx.application.Application;

/**
 * Entry point of the Memory application.
 *
 * @author Stefan Malesevic
 * @version 1.0
 */
public class MainClass {

   /**
    * Launches the JavaFX application.
    *
    * @param args command-line arguments (not used)
    */
   public static void main(String[] args) {
      Application.launch(MemoryApp.class, args);
   }
}
